--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,13 @@ body {
   font-family: 'Poppins', monospace, sans-serif;
 }
 
-.name {
+.name, .job-title{
   color: white;
   font-size: 60px;
   margin: 5px 0px 0px 10px;
   padding: 0px;
+}
+
+.job-title {
+  font-size: 26px;
 }
