--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
   background: linear-gradient(to right bottom, rgba(255, 255, 255, 0), black);
   border-radius: 25px;
   font-family: 'Poppins', monospace, sans-serif;
-  cursor: pointer;
+  overflow: hidden;
 }
 
 .name, .job-title, .website, .email, .tel{
@@ -61,4 +61,12 @@ body {
 .instagram, .github, .code-wars, .leetcode {
   position: relative;
   width: 5rem;
+}
+
+.corner {
+  width: 5rem;
+  margin-left: 47rem;
+  margin-top: 2.2rem;
+  border-radius: 15px;
+  cursor: pointer;
 }
